  * Igor Pro (PR#172)
  * Rexx (PR#199)
  * Agda and Literate Agda (PR#203)
  * Mathematica (PR#245)
  * Nix (PR#267)
  * Pike (PR#237)
  * Hy (PR#238)
  * Chapel (PR#256)
  * Kal (PR#233)
  * Eiffel (PR#273)
  * Cirru (PR#275)
  * ColdFusion CFC (PR#283)
  * Idris (PR#210)
  * Intel objdump (PR#279)
  * MaskJS (PR#280)
  * Inform 6/7 (PR#281)
  * MQL (PR#285)
  * APL (#969)
  * Nit (PR#375)

- New styles: "xcode" and "igor", similar to the default highlighting of
  the respective IDEs.

- Updated the Makefile lexer to yield a little more useful highlighting.

- Lexer aliases passed to ``get_lexer_by_name()`` are now case-insensitive.

- File name matching in lexers and formatters will now use a regex cache
  for speed (PR#205).

- Pygments will now recognize "vim" modelines when guessing the lexer for
  a file based on content (PR#118).

- The NameHighlightFilter now works with any Name.* token type (#790).

- Python 3 lexer: add new exceptions from PEP 3151.

- Opa lexer: add new keywords (PR#170).

- Julia lexer: add keywords and underscore-separated number
  literals (PR#176).

- Lasso lexer: fix method highlighting, update builtins. Fix
  guessing so that plain XML isn't always taken as Lasso (PR#163).

- Objective C/C++ lexers: allow "@" prefixing any expression (#871).

- Ruby lexer: fix lexing of Name::Space tokens (#860) and of symbols
  in hashes (#873).

- Stan lexer: update for version 2.4.0 of the language (PR#162, PR#255, PR#377).

- JavaScript lexer: add the "yield" keyword (PR#196).

- HTTP lexer: support for PATCH method (PR#190).

- Koka lexer: update to newest language spec (PR#201).

- Haxe lexer: rewrite and support for Haxe 3 (PR#174).

- Prolog lexer: add different kinds of numeric literals (#864).

- F# lexer: rewrite with newest spec for F# 3.0 (#842), fix a bug with
  dotted chains (#948).

- Kotlin lexer: general update (PR#271).

- Rebol lexer: fix comment detection and analyse_text (PR#261).
