@@ -43,6 +43,10 @@ Version 2.0
   * APL (#969)
   * Nit (PR#375)
 
+- Added a helper to "optimize" regular expressions that match one of many
+  literal words; this can save 20% and more lexing time with lexers that
+  highlight many keywords or builtins.
+
 - New styles: "xcode" and "igor", similar to the default highlighting of
   the respective IDEs.
 
